--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,6 @@
-<p>
-  sidebar works!
-</p>
+<div class="container">
+  <h6 class="sidebar-title">Mana Cost</h6>
+  <div class="row">
+    <input type="checkbox" class="mana-cost">
+  </div>
+</div>
