--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,39 @@
 <div class="container">
   <h6 class="sidebar-title">Mana Cost</h6>
   <div class="row">
-    <input type="checkbox" class="mana-cost">
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 0
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 1
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 2
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 3
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 4
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 5
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 6
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 7
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 8
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 9
+    </span>
+    <span class="col-sm-2">
+      <input type="checkbox" class="mana-cost"> 10+
+    </span>
+
   </div>
 </div>
