--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,14 @@
 .title {}
 
 .cardPic {}
+
+.container {
+    border-color: black;
+    border-style: solid;
+    border-width: thin;
+}
+.row{
+    border-color: red;
+    border-style: dashed;
+    border-width: thick;
+}
