--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,12 @@
 <h2 class="title">NgStone</h2>
 
 <div class="row">
-  <div class="col-lg-3">
+
+  <div class="col-md-3">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="container">
-    <div class="row">
-      <div *ngFor="let card of cards">
-        <div class="col-md-1">
-          <img class="cardPic" src="{{card.img}}">
-        </div>
-      </div>
-    </div>
+
+  <div class="col-md-9">
+    <app-card-section></app-card-section>
   </div>
-  
 </div>
