more sidebar section

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,38 +1,97 @@
 <div class="container">
-  <h6 class="sidebar-title">Mana Cost</h6>
-  <div class="row">
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 0
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 1
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 2
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 3
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 4
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 5
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 6
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 7
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 8
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 9
-    </span>
-    <span class="col-sm-2">
-      <input type="checkbox" class="mana-cost"> 10+
-    </span>
-  </div>
+  <section class="section">
+    <h6 class="sidebar-title">Mana Cost</h6>
+    <div class="row">
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 0
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 1
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 2
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 3
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 4
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 5
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 6
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 7
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 8
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 9
+      </span>
+      <span class="col-sm-2">
+        <input type="checkbox" class="mana-cost"> 10+
+      </span>
+    </div>
+  </section>
+
+  <section class="section">
+    <h6 class="sidebar-title">Rarity</h6>
+    <div class="row">
+      <span class="col-sm-2">
+        <input type="checkbox"> Basic
+      </span>
+
+      <span class="col-sm-2">
+        <input type="checkbox"> Common
+      </span>
+
+      <span class="col-sm-2">
+        <input type="checkbox"> Rare
+      </span>
+
+      <span class="col-sm-2">
+        <input type="checkbox"> Epic
+      </span>
+
+      <span class="col-sm-2">
+        <input type="checkbox"> Legendary
+      </span>
+    </div>
+  </section>
+
+  <!--These sections are dropdowns
+
+  <section class="section">
+    <h6 class="sidebar-title">Format</h6>
+  </section>
+  
+  <section class="section">
+    <h6 class="sidebar-title">Card Set</h6>
+  </section>
+
+  <section class="section">
+    <h6 class="sidebar-title">Type</h6>
+  </section>
+
+  <section class="section">
+    <h6 class="sidebar-title">Race</h6>
+  </section>
+
+  <section class="section">
+    <h6 class="sidebar-title">Mechanics</h6>
+  </section>
+
+  <section class="section">
+    <h6 class="sidebar-title">Attack</h6>
+  </section>
+
+  <section class="section">
+    <h6 class="sidebar-title">Health</h6>
+  </section>-->
+
+  <!--Create Sort By section (alphabetical, low cost, high cost)-->
 </div>
