--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,5 +1,10 @@
 .container {
     border-color: black;
     border-style: solid;
-    border-width: thin;
+    border-width: thin
+}
+
+.sidebar-title {
+    font-weight: bold;
+    font-size: 40px;
 }
