--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
 <h2 class="title">NgStone</h2>
+
 <div class="row">
+
   <div class="col-md-3">
     <app-sidebar></app-sidebar>
   </div>
+
   <div class="col-md-9">
-    <div *ngFor="let card of cards">
-      <div>
-        <img class="cardPic" src="{{card.img}}">
-      </div>
-    </div>
+    <app-card-section></app-card-section>
   </div>
 </div>
