added comments that show next plans

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -22,15 +22,15 @@
     <h6 class="sidebar-title">Rarity</h6>
     <div class="row">
       <!--the click function should also work here by taking card rarity-->
-      <span class="col-sm-2">Basic</span>
+      <span class="col-md-3">Basic</span>
 
-      <span class="col-sm-2">Common</span>
+      <span class="col-md-3">Common</span>
 
-      <span class="col-sm-2">Rare</span>
+      <span class="col-md-3">Rare</span>
 
-      <span class="col-sm-2">Epic</span>
+      <span class="col-md-3">Epic</span>
 
-      <span class="col-sm-2">Legendary</span>
+      <span class="col-md-3">Legendary</span>
     </div>
   </section>
 
@@ -41,6 +41,7 @@
 
   <section class="section">
     <h6 class="sidebar-title">Card Set</h6>
+    <!--bootstrap accordion with ngFor loop that displays all card set options-->
   </section>
   
   <!--These sections are dropdowns
