--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,76 +2,49 @@
   <section class="section">
     <h6 class="sidebar-title">Mana Cost</h6>
     <div class="row">
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 0
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 1
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 2
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 3
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 4
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 5
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 6
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 7
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 8
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 9
-      </span>
-      <span class="col-sm-2">
-        <input type="checkbox" class="mana-cost"> 10+
-      </span>
+      <!--create click function that takes mana cost and filters all cards request based on 
+      to the api-->
+      <span class="col-sm-2">0</span>
+      <span class="col-sm-2">1</span>
+      <span class="col-sm-2">2</span>
+      <span class="col-sm-2">3</span>
+      <span class="col-sm-2">4</span>
+      <span class="col-sm-2">5</span>
+      <span class="col-sm-2">6</span>
+      <span class="col-sm-2">7</span>
+      <span class="col-sm-2">8</span>
+      <span class="col-sm-2">9</span>
+      <span class="col-sm-2">10+</span>
     </div>
   </section>
 
   <section class="section">
     <h6 class="sidebar-title">Rarity</h6>
     <div class="row">
-      <span class="col-sm-2">
-        <input type="checkbox"> Basic
-      </span>
+      <!--the click function should also work here by taking card rarity-->
+      <span class="col-md-3">Basic</span>
 
-      <span class="col-sm-2">
-        <input type="checkbox"> Common
-      </span>
+      <span class="col-md-3">Common</span>
 
-      <span class="col-sm-2">
-        <input type="checkbox"> Rare
-      </span>
+      <span class="col-md-3">Rare</span>
 
-      <span class="col-sm-2">
-        <input type="checkbox"> Epic
-      </span>
+      <span class="col-md-3">Epic</span>
 
-      <span class="col-sm-2">
-        <input type="checkbox"> Legendary
-      </span>
+      <span class="col-md-3">Legendary</span>
     </div>
   </section>
 
-  <!--These sections are dropdowns
-
   <section class="section">
     <h6 class="sidebar-title">Format</h6>
+    <span> Restrict to Standard</span>
   </section>
-  
+
   <section class="section">
     <h6 class="sidebar-title">Card Set</h6>
+    <!--bootstrap accordion with ngFor loop that displays all card set options-->
   </section>
+  
+  <!--These sections are dropdowns
 
   <section class="section">
     <h6 class="sidebar-title">Type</h6>
